--- a/hour_record.Rmd
+++ b/hour_record.Rmd
@@ -8,8 +8,8 @@ author:
 creative_commons: CC BY
 date: "`r Sys.Date()`"
 output: distill::distill_article
-preview: !r targets::tar_read(github_png)
-repository_url: !r targets::tar_read(repo)
+preview: https://github.com/duju211/ganna_hour_record/blob/master/file_out/gg_time_all.png
+repository_url: "https://github.com/duju211/ganna_hour_record"
 ---
 
 ```{r setup, include=FALSE}
