--- a/hour_record.Rmd
+++ b/hour_record.Rmd
@@ -7,6 +7,7 @@ author:
     url: https://www.datannery.com/
 creative_commons: CC BY
 preview: "https://raw.githubusercontent.com/duju211/ganna_hour_record/master/file_out/gg_time_all.png"
+base_url: "https://www.datannery.com/posts/hour-record-pacing-strategies/"
 repository_url: "https://github.com/duju211/ganna_hour_record"
 date: "`r Sys.Date()`"
 output: distill::distill_article
